# brutal_tetris_hacker

./: .gitignore  Cargo.toml  README.md  tetro_gen.ts  tetros
fixtures/: field_invalid_1  field_invalid_2
src/: algorithm.rs  app_terminal.rs  main.rs  parse_field.rs  structured_output.rs  tetra.rs  util.rs
