[package]
name = "brutal-tetris-hacker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
crossterm = "0.26.1"
derive_more = "0.99.17"
grid = "0.9.0"
vector2math = "0.13.1"
